bad/for_void_over_string.example_compiler_output
ERROR
[1mbad/for_void_over_string.lat:4:7: [1;31merror: [0;1mfor iterator `x` cannot have type `void`[m
	for (void x : "") {}
	     [1;32m^[m
